2001-06-21  Bart Schaefer  <schaefer@zsh.org>

	* 15020: Completion/Zsh/Command/_cd, Completion/Zsh/Context/_autocd,
	Completion/Zsh/Type/_command_names: When AUTO_CD is set, complete
	directory names (including along cdpath) as well as commands when
	in command position.

	* 15018: Completion/compinit: Fix exit status of compdef.

2001-06-20  Bart Schaefer  <schaefer@zsh.org>

	* 14880: Completion/Base/Core/_main_complete: Fix insert-tab style
	when value is `pending'.  (Belated commit, out of number order.)

2001-06-20  Peter Stephenson  <pws@csr.com>

	* 14988 with mod suggested in 14989: Src/exec.c: avoid names of
	saved special parameters being trashed.

2001-06-18  Bart Schaefer  <schaefer@zsh.org>

	* 14965: Src/Zle/computil.c: Silence compiler warnings.

2001-06-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 14962: Completion/Unix/Type/_path_files: make special-dirs
	work together with file-sort (ignore added qualifiers in a
	test)

2001-06-18  Peter Stephenson  <pws@csr.com>

	* 14959: Src/signals.c: more renames for 14951.

2001-06-18  Andrej Borsenkow <bor@zsh.org>

	* unposted: zshconfig.ac:  forgot to change
	zsh_cv_sys_dynamic_broken -> zsh_cv_shared_environ in one place

2001-06-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 14951: Src/signals.c, Src/signals.h: rename handler() to
	zhandler() because it's now exported to modules

2001-06-17  Bart Schaefer  <schaefer@zsh.org>

	* Jason Began: 3931 (see cvs.netbsd.org): zshconfig.ac: Use
	-fPIC for gcc dynamic linking rather than -fpic.

2001-06-14  Peter Stephenson  <pws@csr.com>

	* 14921: Completion/Zsh/_zftp: autoload zfcd_match and zfget_match
	if necessary.

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14903: Src/Zle/complist.c, Src/Zle/zle_tricky.c: fixes for
	display bugs for completion lists (cursor left one line to far
	up or down)

2001-06-13  Peter Stephenson  <pws@csr.com>

	* 14893: Src/signals.c: make handler mod_export because it's